--- a/code/style.css
+++ b/code/style.css
@@ -202,6 +202,13 @@ grid-gap: 15px;
   font-size: 15px;
 }
 
+.blog-post:hover {
+  width: 100%;
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+  opacity: 0.8;
+}
+
+
 /*Tablet*/ 
 @media (min-width: 667px) and (max-width: 1024px){
   body{
