--- a/code/style.css
+++ b/code/style.css
@@ -20,11 +20,6 @@ h1 {
   margin-bottom: 0;
 }
 
-h2 {
-  margin-top: 0px;
-  margin-bottom: 0;
-}
-
 h3 {
   font-style: italic;
 }
@@ -104,6 +99,7 @@ li:hover{
 .big-image img {
   width: 90vw;
   border-radius: 75%;
+  margin: 5%;
 }
 
 .big-text {
