--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,5 @@
 body {
+  font-family: 'Bebas Neue', cursive;
   margin: 0;
   background: white
 }
@@ -16,7 +17,7 @@ header {
 
 .logo-img {
   width: 250px;
-  margin: 0 0 0 2%;                    
+  padding: 10px;                  
 }
 
 
@@ -29,8 +30,6 @@ nav {
 .topnav {
   background-color: #ffff;
   overflow: hidden;
-  font-family: 'Bebas Neue', cursive;
-  
 }
 
 
@@ -77,7 +76,6 @@ article {
 h1 {   
   color: #A68D65;
   margin: 10px;
-  font-family: 'Bebas Neue', cursive;
   font-size: 88px;
 }
 
@@ -95,7 +93,7 @@ h1 {
 .news-box {
   display: block;
   margin: 20px 20px 10px 20px;
-  width: 550px;
+  width: 350px;
   border-radius: 43px;
   background: #e0e0e0;
   box-shadow:  20px 20px 31px #9b9b9b,
@@ -104,7 +102,6 @@ h1 {
 
 
 h3 { /*Text to small news-box*/
-  font-family: 'Bebas Neue', cursive;
   margin: 10px 0 30px 0; 
 }
 
@@ -135,7 +132,6 @@ footer {
 
 
 h4 { /*text for footer*/
-  font-family: 'Bebas Neue', cursive;
   color: #FFF8F0;
 }
 
@@ -144,6 +140,7 @@ h4 { /*text for footer*/
   header { 
     justify-content: space-around;
     flex-direction: column;
+    padding: 10px;
  }      
 } 
   
@@ -170,16 +167,9 @@ h1 {
 }
 
 
-@media (min-width: 668px) and (max-width: 1023px) {
-.news-box {
- width: 300px; 
- }
-}
-
-
 @media (min-width: 1024px) {
 .news-box {
-  width: 350px;
+  width: 550px;
  }
 }
 
