add comment in code

--- a/code/style.css
+++ b/code/style.css
@@ -245,7 +245,8 @@ footer {
   justify-content: center;
 }
 
-.fab {
+
+.fab { /*this is styling for the icon I used inside a button*/
   padding-inline: 0.5em;
   color: #222222;
 }
