--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 body {
     margin: 0;
+    font-family: "Trirong", serif;
  }
 
 /*HEADER*/
@@ -62,8 +63,8 @@ body {
 
     .picture-putin {
         width: 300px;
-        margin: 0;
-    }
+     }
+        
 
     .grid-main-news {
         display: grid;
@@ -74,6 +75,7 @@ body {
     }
 
 /*SMÅ NYHETERNA*/
+
 
     .grid-item1 {
         background-color: white;
@@ -89,17 +91,17 @@ body {
         border-top: 1px solid black;
     }
     
-    .picture-virus {
-        width: 200px;
-        height: auto;
-    }
-    
-    
     .grid-item3 {
         background-color: white;
         padding: 10px;
         border-bottom: 1px solid black;
         border-top: 1px solid black;
+    }
+
+
+    .picture-virus {
+        width: 200px;
+        height: auto;
     }
     
     .grid-item4 {
@@ -211,6 +213,7 @@ body {
         padding: 10px;  
     }
 
+   
     .main-news-right {
         padding: 10px;
     }
