--- a/code/style.css
+++ b/code/style.css
@@ -1,14 +1,18 @@
 body {
-  font-family: 'Lato', sans-serif;
-  color:#9ab7d3;
+  font-family: "Lato", sans-serif;
+  color: #9ab7d3;
   background: #f7e1d3;
 }
 
-p, h1, h2, h3, h4 {
+p,
+h1,
+h2,
+h3,
+h4 {
   text-align: center;
 }
 
-.grid-container{
+.grid-container {
   display: grid;
   row-gap: 15px;
   align-items: space-around;
@@ -32,18 +36,18 @@ img.rounded-corners {
 }
 
 .page-title {
-  display:none;
+  display: none;
 }
 
 nav {
   width: 100%;
   padding: 4px;
   overflow: auto;
-  display:flex;
+  display: flex;
 }
 
 nav a {
-  background-color:#f5d2d3;
+  background-color: #f5d2d3;
   color: #bdd0c4;
   font-size: 20px;
   display: inline-block;
@@ -58,11 +62,10 @@ a:hover {
   cursor: pointer;
 }
 
-
 .big-news {
   background: #f5d2d3;
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   margin: 20px;
   padding: 20px;
   width: 90%;
@@ -73,24 +76,22 @@ a:hover {
   text-align: center;
 }
 
-
-
-.bignews-img{
+.bignews-img {
   display: inline-block;
   justify-content: center;
   width: 80%;
-   height: 80%;
-   margin: 0 auto;
+  height: 80%;
+  margin: 0 auto;
 }
 
-.bignews-text{
+.bignews-text {
   display: flex;
-  text-align:center;
-  width: 90%; 
+  text-align: center;
+  width: 90%;
   font-size: 18px;
 }
 
-.small-news{
+.small-news {
   display: block;
   align-content: space-between;
   width: 100%;
@@ -107,7 +108,7 @@ a:hover {
   text-align: center;
 }
 
-.introvert-footer{
+.introvert-footer {
   color: #bdd0c4;
   padding: 2%;
   font-family: cursive;
@@ -115,7 +116,7 @@ a:hover {
   margin-bottom: 10px;
 }
 
-.socialmedia a{
+.socialmedia a {
   font-family: lato, sans-serif;
   font-size: 40px;
   display: inline-block;
@@ -124,39 +125,31 @@ a:hover {
   text-align: space-between;
 }
 
-@media only screen and (min-width:668px) { 
-  body{
+@media only screen and (min-width: 668px) {
+  body {
     flex-direction: row;
   }
-  
-  .page-title{
+
+  .page-title {
     display: inline-block;
     font-size: 60px;
-    align-items: center; 
+    align-items: center;
   }
-  
+
   .news {
-    width: 100%; 
-    display: flex; 
+    display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-   
-    
-   }
+    flex-wrap: nowrap;
+    width: 100%;
+    gap: 2px;
+  }
 
-   .small-news {
-     width: 35%;
-     margin: 10px; 
-     
-   }
+  .small-news {
+    width: 100%;
+  }
 }
-   @media only screen and (max-width: 400px){
-     nav {
-       flex-direction: column;
-     }
-   }
-   
-
-  
-
+@media only screen and (max-width: 400px) {
+  nav {
+    flex-direction: column;
+  }
+}
