--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,44 @@
-html {
-  background: #0025ff;
-  color: #fff;
+*, *::before *::after { 
+  box-sizing: inherit;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  box-sizing: border-box;
+
+  background: midnightblue;
+  color: #fff;
+  font-family: 'Quicksand', sans-serif;
+}
+
+/* ––––– NAVBAR ––––– */
+
+.nav-bar {
+  display: flex;
+  align-items: center;
+  background: black;
+
+  width: 100%;
+  height: 3.5rem;
+}
+
+.logo-icon {
+  width: 2.8rem;
+  height: 2.8rem;
+}
+
+.menu {
+  display: flex;
+  justify-content: space-around;
+}
+
+.menu-links {
+  color: white;
+  text-decoration: none;
+}
+
+/* ––––– MEDIA QUERIES ––––– */
