--- a/code/style.css
+++ b/code/style.css
@@ -20,25 +20,77 @@ html {
 .nav-bar {
   display: flex;
   align-items: center;
-  background: black;
+  justify-content: space-between;
 
+  background: black;
   width: 100%;
   height: 3.5rem;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  margin-left: .5rem;
 }
 
 .logo-icon {
   width: 2.8rem;
   height: 2.8rem;
+  margin-right: .2rem;
+}
+
+.hamburger-menu-icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 7px;
+  margin: 9px 18px 0 0;
+
+  width: 30px;
+  height: 30px;
+}
+
+.hamburger-stripes {
+  background: white;
+  border-radius: 2px;
+
+  width: 100%;
+  height: 3px;
 }
 
 .menu {
-  display: flex;
-  justify-content: space-around;
+  display: none;
 }
 
 .menu-links {
   color: white;
   text-decoration: none;
+
+  margin: 0 1.5rem;
+}
+
+.menu-links.active {
+  border-bottom: .1rem solid grey;
+  padding-bottom: .2rem;
 }
 
 /* ––––– MEDIA QUERIES ––––– */
+
+@media (min-width: 668px) and (max-width: 1024px) {
+  .menu {
+    display: inline;
+  }
+
+  .hamburger-menu-icon {
+    display: none;
+  }
+}
+
+@media (min-width: 1025px) {
+  .menu {
+    display: inline;
+  }
+  .hamburger-menu-icon {
+    display: none;
+  }
+}
