--- a/code/style.css
+++ b/code/style.css
@@ -10,36 +10,36 @@
 html {
   box-sizing: border-box;
 
-  background: midnightblue;
+  background: black;
   color: #fff;
   font-family: 'Quicksand', sans-serif;
 }
 
 /* ––––– NAVBAR ––––– */
 
-.nav-bar {
+.navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
 
   background: black;
   width: 100%;
-  height: 3.5rem;
+  height: 4rem;
 }
 
-.logo {
+.navbar-logo {
   display: flex;
   align-items: center;
   margin-left: .5rem;
 }
 
-.logo-icon {
+.navbar-logo-icon {
   width: 2.8rem;
   height: 2.8rem;
   margin-right: .2rem;
 }
 
-.hamburger-menu-icon {
+.navbar-hamburger-icon {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,7 +50,7 @@ html {
   height: 30px;
 }
 
-.hamburger-stripes {
+.navbar-hamburger-stripes {
   background: white;
   border-radius: 2px;
 
@@ -58,39 +58,131 @@ html {
   height: 3px;
 }
 
-.menu {
+.navbar-menu {
   display: none;
 }
 
-.menu-links {
+.navbar-menu-links {
   color: white;
   text-decoration: none;
 
   margin: 0 1.5rem;
 }
 
-.menu-links.active {
-  border-bottom: .1rem solid grey;
-  padding-bottom: .2rem;
+.navbar-menu-links.active {
+  border-bottom: 2px solid gray;
+  padding-bottom: 3px;
+}
+
+/* ––––– BIG NEWS SECTION ––––– */
+
+.big-news {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.big-news-imagebox {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 350px;
+  overflow: hidden;
+}
+
+.big-news-text {
+
+}
+
+.big-news-heading {
+  margin: .5rem 1rem;
+  letter-spacing: .5px;
+}
+
+.big-news-p {
+  display: none;
+  margin: 0 1rem .5rem;
+  letter-spacing: .5px;
+}
+
+.big-news-button {
+  background-color: grey;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  font-family: 'Quicksand', sans-serif;
+
+  width: 5.5rem;
+  height: 1.7rem;
+  margin: .6rem 1rem 1rem;
+}
+
+/* ––––– OTHER NEWS SECTION ––––– */
+
+.other-news-grid {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  height: 100vh;
+  gap: 1rem;
+  margin: 0 1rem;
+  
+}
+
+.other-news {
+
+  background: olive;
+  text-align: center;
+}
+
+.other-news-1 {
+  grid-column: span(3);
 }
 
 /* ––––– MEDIA QUERIES ––––– */
 
 @media (min-width: 668px) and (max-width: 1024px) {
-  .menu {
+  .navbar-menu {
     display: inline;
   }
 
-  .hamburger-menu-icon {
+  .navbar-hamburger-icon {
     display: none;
+  }
+
+  .big-news {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .big-news-text {
+    margin-top: 4rem;
+  }
+
+  .big-news-p {
+    display: block;
   }
 }
 
 @media (min-width: 1025px) {
-  .menu {
-    display: inline;
+  .navbar-menu {
+    display: block;
   }
-  .hamburger-menu-icon {
+
+  .navbar-hamburger-icon {
     display: none;
+  }
+
+  .big-news {
+    background: pink;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .big-news-text {
+    margin-top: 4rem;
+  }
+
+  .big-news-p {
+    display: block;
   }
 }
