--- a/code/style.css
+++ b/code/style.css
@@ -78,24 +78,34 @@ html {
 
 .big-news {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column;
+  justify-content: center; */
+  flex-wrap: wrap;
   justify-content: center;
+  padding: 1rem;
 }
 
 .big-news-imagebox {
   display: flex;
-  justify-content: center;
+  background-color: grey;
   width: 100%;
   height: 350px;
-  overflow: hidden;
+}
+
+.big-news-image {
+  display: ;
+  width: 100%;
+  height: inherit;
+  object-fit: none;
 }
 
 .big-news-text {
-
+  width: 35rem;
+  margin: .5rem 0;
+  padding: 0;
 }
 
 .big-news-heading {
-  margin: .5rem 1rem;
   letter-spacing: .5px;
 }
 
@@ -114,32 +124,45 @@ html {
 
   width: 5.5rem;
   height: 1.7rem;
-  margin: .6rem 1rem 1rem;
+  margin: 1rem 0;
 }
 
 /* ––––– OTHER NEWS SECTION ––––– */
 
 .other-news-grid {
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  height: 100vh;
+  grid-template-columns: 1fr;
   gap: 1rem;
   margin: 0 1rem;
   
 }
 
 .other-news {
-
-  background: olive;
-  text-align: center;
+  background: white;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 }
 
-.other-news-1 {
-  grid-column: span(3);
+.other-news-image {
+  width: 170px;
+  margin: .5rem 0 .5rem 1rem;
+}
+
+.other-news-textbox {
+  background: black;
+  margin: .5rem .5rem .5rem 0;
+  padding: 2.5rem 2.5rem 2rem 1rem;
+}
+
+
+.other-news-link {
+  color: grey;
+  text-decoration: none
 }
 
 /* ––––– MEDIA QUERIES ––––– */
 
+/* - TABLET - */
 @media (min-width: 668px) and (max-width: 1024px) {
   .navbar-menu {
     display: inline;
@@ -149,7 +172,7 @@ html {
     display: none;
   }
 
-  .big-news {
+ /* .big-news {
     flex-direction: row;
     justify-content: space-around;
   }
@@ -161,7 +184,9 @@ html {
   .big-news-p {
     display: block;
   }
-}
+} 
+
+/* - DESKTOP - */
 
 @media (min-width: 1025px) {
   .navbar-menu {
@@ -185,4 +210,8 @@ html {
   .big-news-p {
     display: block;
   }
+} */
+
+@media (min-width: 668px) {
+  /* Lägg in alla queries som är samma för tablet och desktop här */
 }
