--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,5 @@
-*, *::before *::after { 
+*,
+*::before *::after {
   box-sizing: inherit;
 }
 
@@ -7,12 +8,17 @@
   padding: 0;
 }
 
+
+:root {
+  --accent-color: rgb(255, 94, 0);
+}
+
 html {
   box-sizing: border-box;
 
   background: black;
-  color: #fff;
-  font-family: 'Quicksand', sans-serif;
+  color: white;
+  font-family: "Quicksand", sans-serif;
 }
 
 /* ––––– NAVBAR ––––– */
@@ -30,13 +36,13 @@ html {
 .navbar-logo {
   display: flex;
   align-items: center;
-  margin-left: .5rem;
+  margin-left: 0.5rem;
 }
 
 .navbar-logo-icon {
   width: 2.8rem;
   height: 2.8rem;
-  margin-right: .2rem;
+  margin-right: 0.2rem;
 }
 
 .navbar-hamburger-icon {
@@ -70,7 +76,7 @@ html {
 }
 
 .navbar-menu-links.active {
-  border-bottom: 2px solid purple;
+  border-bottom: 2px solid var(--accent-color);
   padding-bottom: 3px;
 }
 
@@ -80,15 +86,15 @@ html {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: .5rem 1rem 1rem 1rem;
+  padding: 0.5rem 1rem 1rem 1rem;
 }
 
 .big-news-imagebox {
   display: flex;
-  background-color: grey;
+  background-color: gray;
   width: 100%;
   height: 300px;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .big-news-image {
@@ -98,30 +104,29 @@ html {
 
 .big-news-text {
   width: 100%;
-  margin: .2rem 0 0 0;
+  margin: 0.2rem 0 0 0;
   padding: 0;
 }
 
 .big-news-heading {
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
 }
 
 .big-news-p {
   display: none;
-  margin: 0 1rem .5rem;
-  letter-spacing: .5px;
 }
 
 .big-news-button {
-  background-color: gray;
+  display: none;
+  background-color: var(--accent-color);
   border: none;
   border-radius: 10px;
   color: white;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 
   width: 5.5rem;
-  height: 1.7rem;
-  margin-top: 1rem;
+  height: 2rem;
+  margin: 1rem 0 0.5rem 0;
 }
 
 /* ––––– OTHER NEWS SECTION ––––– */
@@ -131,32 +136,30 @@ html {
   grid-template-columns: 1fr;
   gap: 1rem;
   margin: 0 1rem;
+  padding-top: 1rem;
 }
 
 .other-news {
-  background: black;
   display: grid;
   grid-template-columns: 1fr 4fr;
 }
 
 .other-news-image {
   width: 150px;
-  margin: .5rem 0;
+  margin: 0.5rem 0;
 }
 
 .other-news-textbox {
-  background: black;
-  margin: .5rem .5rem .5rem 0;
-  padding: 2rem 2.5rem 2rem .7rem;
+  margin: 0.5rem 0.5rem 0.5rem 0;
+  padding: 1.8rem 2.5rem 2rem 0.7rem;
 }
-
 
 .other-news-link {
   display: inline-block;
-  color: grey;
-  
+  color: gray;
+
   text-decoration: none;
-  margin-top: .6rem;
+  margin-top: 0.6rem;
 }
 
 /* ––––– MEDIA QUERIES ––––– */
@@ -171,11 +174,40 @@ html {
     display: none;
   }
 
- /* .big-news {
-    flex-direction: row;
-    justify-content: space-around;
+  .big-news {
+    justify-content: space-between;
   }
 
+  .big-news-imagebox {
+    display: flex;
+    background-color: gray;
+    width: 55%;
+    height: 300px;
+    margin-bottom: 0.5rem;
+  }
+
+  .big-news-image {
+    width: 100%;
+    object-fit: cover;
+  }
+  
+  .big-news-text {
+    width: 40%;
+    margin: 3rem 1rem 0 0;
+    padding: 0;
+  }
+
+  .big-news-p {
+    display: inline-block;
+    font-size: 1rem;
+    letter-spacing: 0.5px;
+    margin: .5rem .6rem 0 0;
+  }
+
+  .big-news-button {
+    display: block;
+  }
+/*
   .big-news-text {
     margin-top: 4rem;
   }
@@ -183,7 +215,37 @@ html {
   .big-news-p {
     display: block;
   }
-} 
+  */
+
+  /* OTHER NEWS SECTION TABLET */
+
+  .other-news-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+    margin: 0 1rem;
+    padding-top: 1.5rem;
+  }
+
+  .other-news {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .other-news-image {
+    width: 200px;
+    margin: 0;
+  }
+
+  .other-news-textbox {
+    background: black;
+    padding: 0rem;
+    
+    /* behövs? */
+    width: fit-content;
+  }
+
+}
 
 /* - DESKTOP - */
 
@@ -209,8 +271,7 @@ html {
   .big-news-p {
     display: block;
   }
-} */
-
-@media (min-width: 668px) {
+}
+*/ @media (min-width: 668px) {
   /* Lägg in alla queries som är samma för tablet och desktop här */
 }
