--- a/code/style.css
+++ b/code/style.css
@@ -16,7 +16,7 @@
 html {
   box-sizing: border-box;
 
-  background: black;
+  background: blue;
   color: white;
   font-family: "Quicksand", sans-serif;
 }
@@ -36,7 +36,15 @@ html {
 .navbar-logo {
   display: flex;
   align-items: center;
-  margin-left: 0.5rem;
+  margin-left: .5rem;
+}
+
+.moon-logo {
+  width: 35px;
+  height: 35px;
+  background: var(--accent-color);
+  border-radius: 50%;
+  margin: 0 .3rem 0 .4rem;
 }
 
 .navbar-logo-icon {
@@ -50,7 +58,7 @@ html {
   flex-direction: column;
   align-items: center;
   gap: 7px;
-  margin: 9px 18px 0 0;
+  margin: 9px 18px 2px 0;
 
   width: 30px;
   height: 30px;
@@ -71,7 +79,7 @@ html {
 .navbar-menu-links {
   color: white;
   text-decoration: none;
-
+  letter-spacing: .1rem;
   margin: 0 1.5rem;
 }
 
