--- a/code/style.css
+++ b/code/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
 body {
   background-color: #5158ff;
   margin: 0
@@ -7,6 +9,95 @@ body {
   padding: 40px 0;
 }
 
+.title-h1 {
+  font-family: 'Great Vibes', cursive;
+  font-size: 8em;
+  font-weight: 600;
+  margin: 0 0 8px;
+  text-align: center;
+  color: #fff666;
+}
 
+.title-sub {
+  font-size: 2em;
+  margin: 0;
+  text-align: center;
+  font-family: sans-serif;
+}
 
+/*NAV PAGE*/
+
+.nav-page {
+  max-width: 960px;
+  margin: 0 auto;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  background-color: #ffb3df;
+}
+
+.nav-page-link {
+  color: #fff666;
+  border-bottom: 2px dotted transparent;
+  font-size: 1.2em;
+  font-family: sans-serif;
+  text-decoration: none;
+  *margin: 10px 8px 8px;
+  transition: border 0.3s ease;
+}
+
+/*GRIDS*/
+
+.grid {
+  max-width: 960px;
+  margin: auto;
+  padding: 32px 16px;
+}
+
+.grid-col-title {
+  color: #fff666;
+  font-family: sans-serif;
+  margin: 0 0 8px;
+}
+
+.grid-col-2 {
+  margin: 0 0 24px;
+  padding: 0 0 16px;
+  display: grid;
+  grid-template-columns: 60% calc(40% - 16px);
+  grid-gap: 16px;
+}
+
+.grid-col-3 {
+  margin: 24px 0;
+  display: grid;
+  grid-template-columns: repeat(3, calc(33.33% - 11px));
+  grid-gap: 16px;
+}
+
+/*GRID ITEMS*/
+
+.grid-item-lg {
+  padding: 0 20px 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+ .grid-item-img {
+  width: 100%;
+  height: 232px;
+}
+
+ .grid__item__title {
+  font-size: 20px;
+  line-height: 1.3;
+  width: 70%;
+}
+
+.grid-item-img {
+    width: 100%;
+    height: 168px;
+}
 
