--- a/code/style.css
+++ b/code/style.css
@@ -2,3 +2,21 @@ html {
   background: #0025ff;
   color: #fff;
 }
+
+.top-heading{
+  color: rebeccapurple
+}
+
+.big-news{
+  background-color: goldenrod;
+  color: darkolivegreen;
+  padding: 20px;
+  width: 400px;
+  
+}
+.big-news img{
+  width: 100%;
+}
+.other-news{
+  color: yellow
+}
