--- a/code/style.css
+++ b/code/style.css
@@ -10,13 +10,24 @@ html {
 .big-news{
   background-color: goldenrod;
   color: darkolivegreen;
-  padding: 20px;
+  padding: 10px 5px;
   width: 400px;
+  display: block;
+  margin: 20px 5px;
+  border: 15px dotted red
   
 }
 .big-news img{
   width: 100%;
+  
 }
-.other-news{
-  color: yellow
+.other-news{ 
+  background-color: azure;
+  color: green;
+  padding: 30px 10px;
+  width: 400px;
+  display: block;
+  margin: 20px 5px; 
+  border: 3px groove rebeccapurple
+  
 }
