--- a/code/style.css
+++ b/code/style.css
@@ -8,15 +8,14 @@
   padding: 0;
 }
 
-
 :root {
+  --background-color: rgb(15, 15, 15);
   --accent-color: rgb(255, 94, 0);
 }
 
 html {
   box-sizing: border-box;
-
-  background: black;
+  background: var(--background-color);
   color: white;
   font-family: "Quicksand", sans-serif;
 }
@@ -28,15 +27,15 @@ html {
   align-items: center;
   justify-content: space-between;
 
-  background: black;
   width: 100%;
   height: 4rem;
+  margin-bottom: 1rem;
 }
 
 .navbar-logo {
   display: flex;
   align-items: center;
-  margin-left: .5rem;
+  margin-left: 0.5rem;
 }
 
 .moon-logo {
@@ -44,7 +43,7 @@ html {
   height: 35px;
   background: var(--accent-color);
   border-radius: 50%;
-  margin: 0 .3rem 0 .4rem;
+  margin: 0 0.3rem 0 0.4rem;
 }
 
 .navbar-logo-icon {
@@ -58,7 +57,7 @@ html {
   flex-direction: column;
   align-items: center;
   gap: 7px;
-  margin: 9px 18px 2px 0;
+  margin: 0.8rem 1rem 0.1rem 0;
 
   width: 30px;
   height: 30px;
@@ -67,7 +66,6 @@ html {
 .navbar-hamburger-stripes {
   background: white;
   border-radius: 2px;
-
   width: 100%;
   height: 3px;
 }
@@ -79,7 +77,7 @@ html {
 .navbar-menu-links {
   color: white;
   text-decoration: none;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   margin: 0 1.5rem;
 }
 
@@ -94,13 +92,11 @@ html {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-
   margin: 0rem 1rem 0 0;
 }
 
 .big-news-imagebox {
   display: flex;
-  background-color: gray;
   width: 100%;
   height: 300px;
   margin-bottom: 0.5rem;
@@ -113,7 +109,7 @@ html {
 
 .big-news-text {
   width: 100%;
-  margin: 0.2rem 0 1rem 1rem;
+  margin: 0.2rem 0 0 1rem;
 }
 
 .big-news-heading {
@@ -126,15 +122,20 @@ html {
 
 .big-news-button {
   display: none;
-  background-color: black;
+  background-color: var(--accent-color);
   border: none;
-  border-radius: 10px;
+  border-radius: 12px;
   color: white;
   font-family: "Quicksand", sans-serif;
-
   width: 5.5rem;
   height: 2rem;
   margin: 1rem 0 0.5rem 0;
+}
+
+.divider {
+  margin: 2rem auto 0;
+  width: 93%;
+  border: 1px solid var(--accent-color);
 }
 
 /* ––––– OTHER NEWS SECTION ––––– */
@@ -143,7 +144,7 @@ html {
   display: grid;
   grid-template-columns: 1fr;
   gap: 1rem;
-  margin: 0 1rem;
+  margin: 0.5rem 1rem 0;
   padding-top: 1rem;
 }
 
@@ -165,19 +166,21 @@ html {
 .other-news-link {
   display: inline-block;
   color: gray;
-
   text-decoration: none;
   margin-top: 0.6rem;
+}
+
+.other-news-dots {
+  color: var(--accent-color);
+  letter-spacing: 0.2rem;
+  margin-left: 0.5rem;
 }
 
 /* ––––– MEDIA QUERIES ––––– */
 
 /* - TABLET - */
 @media (min-width: 668px) and (max-width: 1024px) {
-  .navbar-menu {
-    display: inline;
-  }
-
+  /* TABLET: big news section */
   .navbar-hamburger-icon {
     display: none;
   }
@@ -189,7 +192,6 @@ html {
 
   .big-news-imagebox {
     display: flex;
-    background-color: gray;
     width: 55%;
     height: 300px;
     margin-bottom: 0.5rem;
@@ -199,7 +201,7 @@ html {
     width: 100%;
     object-fit: cover;
   }
-  
+
   .big-news-text {
     width: 40%;
     margin: 3rem 1rem 0 0;
@@ -210,19 +212,19 @@ html {
     display: inline-block;
     font-size: 1rem;
     letter-spacing: 0.5px;
-    margin: .5rem .6rem 0 0;
+    margin: 0.5rem 0.6rem 0 0;
   }
 
   .big-news-button {
     display: block;
   }
 
-  /* OTHER NEWS SECTION TABLET */
+  /* TABLET: other news section */
 
   .other-news-grid {
     display: grid;
-    grid-template-columns: 302px 302px;
-    gap: 5rem;
+    grid-template-columns: 1fr 1fr;
+    gap: 1.5rem;
     margin: 0 1.5rem;
     padding-top: 1.5rem;
   }
@@ -230,51 +232,94 @@ html {
   .other-news {
     display: grid;
     grid-template-columns: 1fr;
-    background-color: black;
     padding: 1rem 1rem 0 1rem;
-    border-radius: 10%;
   }
 
   .other-news-image {
-    width: 270px;
-    border-radius: 10%;
+    width: 70%;
+    border-radius: 5%;
   }
 
   .other-news-textbox {
-
-    padding: .2rem 0 1rem 0;
-    
-    /* behövs? */
-    width: fit-content;
+    padding: 0.2rem 0 1rem 0;
   }
-
 }
 
 /* - DESKTOP - */
-
 @media (min-width: 1025px) {
-  .navbar-menu {
+  /* DESKTOP: big news section */
+
+  .big-news {
+    justify-content: space-between;
+  }
+
+  .big-news-imagebox {
+    display: flex;
+    width: 45%;
+    height: inherit;
+  }
+
+  .big-news-image {
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .big-news-text {
+    width: 40%;
+    margin: 5.5rem 8rem 4rem 0;
+  }
+
+  .big-news-heading {
+    font-size: 2.5rem;
+  }
+
+  .big-news-p {
+    display: inline-block;
+    font-size: 1.2rem;
+    letter-spacing: 0.5px;
+    margin: 0.5rem 6rem 0 0;
+  }
+
+  .big-news-button {
     display: block;
+    margin-top: 1.2rem;
+    font-size: 0.9rem;
+    width: 6rem;
+    height: 2.5rem;
+  }
+  
+    /* DESKTOP: other news section */
+
+    .other-news-grid {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      padding-top: 1.5rem;
+    }
+  
+    .other-news {
+      display: grid;
+      grid-template-columns: 1fr;
+      margin: 1rem 1rem 0 1rem;
+      min-width: 10rem;
+    }
+  
+    .other-news-image {
+      width: 70%;
+      border-radius: 5%;
+    }
+  
+    .other-news-textbox {
+      padding: 0.2rem 0 1rem 0;
+    }
+
+}
+@media (min-width: 668px) {
+  /* Lägg in alla queries som är samma för tablet och desktop här */
+  .navbar-menu {
+    display: inline;
   }
 
   .navbar-hamburger-icon {
     display: none;
   }
-
-  .big-news {
-    background: pink;
-    flex-direction: row;
-    justify-content: space-around;
-  }
-
-  .big-news-text {
-    margin-top: 4rem;
-  }
-
-  .big-news-p {
-    display: block;
-  }
-}
-*/ @media (min-width: 668px) {
-  /* Lägg in alla queries som är samma för tablet och desktop här */
 }
