--- a/code/style.css
+++ b/code/style.css
@@ -31,3 +31,26 @@ html {
   border: 3px groove rebeccapurple
   
 }
+.other-news img{
+  width: 100%;
+}
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  border-radius: 12px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+
+
+}
+
+.button:hover {
+  background-color: darkslategray;
+  transition-duration: 0.4s;
+  color: indianred;
+}
