--- a/code/style.css
+++ b/code/style.css
@@ -9,14 +9,17 @@
 }
 
 :root {
-  --background-color: rgb(15, 15, 15);
-  --accent-color: rgb(255, 94, 0);
+  --background-color: rgb(0, 0, 46);
+  --text-color: whitesmoke;
+  --link-color: grey;
+  --button-color: rgb(97, 97, 97);
+  --accent-color: rgb(255, 0, 111);
 }
 
 html {
   box-sizing: border-box;
   background: var(--background-color);
-  color: white;
+  color: var(--text-color);
   font-family: "Quicksand", sans-serif;
 }
 
@@ -29,7 +32,7 @@ html {
 
   width: 100%;
   height: 4rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .navbar-logo {
@@ -39,17 +42,12 @@ html {
 }
 
 .moon-logo {
-  width: 35px;
-  height: 35px;
   background: var(--accent-color);
   border-radius: 50%;
-  margin: 0 0.3rem 0 0.4rem;
-}
 
-.navbar-logo-icon {
-  width: 2.8rem;
-  height: 2.8rem;
-  margin-right: 0.2rem;
+  width: 35px;
+  height: 35px;
+  margin: 0 0.5rem 0 0.4rem;
 }
 
 .navbar-hamburger-icon {
@@ -57,14 +55,14 @@ html {
   flex-direction: column;
   align-items: center;
   gap: 7px;
-  margin: 0.8rem 1rem 0.1rem 0;
 
   width: 30px;
   height: 30px;
+  margin: 0.5rem 1rem 0 0;
 }
 
 .navbar-hamburger-stripes {
-  background: white;
+  background: var(--text-color);
   border-radius: 2px;
   width: 100%;
   height: 3px;
@@ -75,13 +73,13 @@ html {
 }
 
 .navbar-menu-links {
-  color: white;
+  color: var(--text-color);
   text-decoration: none;
   letter-spacing: 0.1rem;
   margin: 0 1.5rem;
 }
 
-.navbar-menu-links.active {
+.navbar-menu-links:hover {
   border-bottom: 2px solid var(--accent-color);
   padding-bottom: 3px;
 }
@@ -91,51 +89,39 @@ html {
 .big-news {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  margin: 0rem 1rem 0 0;
 }
 
 .big-news-imagebox {
   display: flex;
   width: 100%;
   height: 300px;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.7rem;
 }
 
 .big-news-image {
-  width: 100%;
+  width: 97%;
   object-fit: cover;
 }
 
-.big-news-text {
+.big-news-textbox {
   width: 100%;
-  margin: 0.2rem 0 0 1rem;
+  letter-spacing: 0.5px;
+  margin: 0 1.2rem;
 }
 
 .big-news-heading {
-  letter-spacing: 0.5px;
+  font-size: 1.5rem;
 }
 
-.big-news-p {
-  display: none;
-}
-
+.big-news-p,
 .big-news-button {
   display: none;
-  background-color: var(--accent-color);
-  border: none;
-  border-radius: 12px;
-  color: white;
-  font-family: "Quicksand", sans-serif;
-  width: 5.5rem;
-  height: 2rem;
-  margin: 1rem 0 0.5rem 0;
 }
 
 .divider {
-  margin: 2rem auto 0;
   width: 93%;
   border: 1px solid var(--accent-color);
+  margin: 1.5rem auto;
 }
 
 /* ––––– OTHER NEWS SECTION ––––– */
@@ -143,9 +129,8 @@ html {
 .other-news-grid {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 1rem;
-  margin: 0.5rem 1rem 0;
-  padding-top: 1rem;
+  gap: 1.5rem;
+  margin-left: 1.2rem;
 }
 
 .other-news {
@@ -154,18 +139,18 @@ html {
 }
 
 .other-news-image {
+  border-top-left-radius: 15%;
+  border-bottom-right-radius: 15%;
   width: 150px;
-  margin: 0.5rem 0;
 }
 
 .other-news-textbox {
-  margin: 0.5rem 0.5rem 0.5rem 0;
-  padding: 1.8rem 2.5rem 2rem 0.7rem;
+  margin: 1.5rem 1.5rem 0 1.2rem;
 }
 
 .other-news-link {
   display: inline-block;
-  color: gray;
+  color: var(--link-color);
   text-decoration: none;
   margin-top: 0.6rem;
 }
@@ -176,25 +161,22 @@ html {
   margin-left: 0.5rem;
 }
 
-/* ––––– MEDIA QUERIES ––––– */
+/* – ******************** MEDIA QUERIES ************************** – */
 
 /* - TABLET - */
-@media (min-width: 668px) and (max-width: 1024px) {
-  /* TABLET: big news section */
+@media (min-width: 668px) {
   .navbar-hamburger-icon {
     display: none;
   }
 
-  .big-news {
-    justify-content: space-between;
-    margin-bottom: 1rem;
+  .navbar-menu {
+    display: inline;
   }
 
   .big-news-imagebox {
-    display: flex;
     width: 55%;
-    height: 300px;
-    margin-bottom: 0.5rem;
+    max-width: 600px;
+    margin-right: 1rem;
   }
 
   .big-news-image {
@@ -202,124 +184,87 @@ html {
     object-fit: cover;
   }
 
-  .big-news-text {
-    width: 40%;
-    margin: 3rem 1rem 0 0;
-    padding: 0;
+  .big-news-textbox {
+    width: 35%;
+    margin-top: 2rem;
+  }
+
+  .big-news-heading {
+    display: inline-block;
+    margin-bottom: 0.5rem;
   }
 
   .big-news-p {
     display: inline-block;
-    font-size: 1rem;
-    letter-spacing: 0.5px;
-    margin: 0.5rem 0.6rem 0 0;
+    font-size: 0.9rem;
+    margin-bottom: 1rem;
   }
 
   .big-news-button {
     display: block;
+    background: var(--button-color);
+    border: none;
+    border-radius: 12px;
+    color: var(--text-color);
+    font-family: "Quicksand", sans-serif;
+    width: 5.5rem;
+    height: 2.2rem;
   }
 
-  /* TABLET: other news section */
+  .divider {
+    width: 94%;
+    margin: 2.5rem auto;
+  }
 
   .other-news-grid {
-    display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 1.5rem;
-    margin: 0 1.5rem;
-    padding-top: 1.5rem;
+    margin: 0 2rem;
   }
 
   .other-news {
     display: grid;
     grid-template-columns: 1fr;
-    padding: 1rem 1rem 0 1rem;
   }
 
   .other-news-image {
     width: 70%;
-    border-radius: 5%;
+    height: auto;
+  }
+
+  .other-news-image {
+    transition: ease-in-out 0.1s;
+  }
+  .other-news-image:hover {
+    transform: rotate(-2deg);
+  }
+  .other-news-image:active {
+    transform: rotate(0deg);
   }
 
   .other-news-textbox {
-    padding: 0.2rem 0 1rem 0;
+    margin: 1.2rem 1.5rem 1rem 0;
   }
 }
 
 /* - DESKTOP - */
 @media (min-width: 1025px) {
-  /* DESKTOP: big news section */
-
-  .big-news {
-    justify-content: space-between;
-  }
-
   .big-news-imagebox {
-    display: flex;
-    width: 45%;
-    height: inherit;
-  }
-
-  .big-news-image {
-    width: 100%;
-    object-fit: cover;
-  }
-
-  .big-news-text {
     width: 40%;
-    margin: 5.5rem 8rem 4rem 0;
+    height: auto;
+    margin-right: 1.7rem;
   }
 
   .big-news-heading {
-    font-size: 2.5rem;
+    font-size: 2rem;
+    min-width: 450px;
   }
 
   .big-news-p {
-    display: inline-block;
-    font-size: 1.2rem;
-    letter-spacing: 0.5px;
-    margin: 0.5rem 6rem 0 0;
+    font-size: 1rem;
+    max-width: 500px;
   }
 
-  .big-news-button {
-    display: block;
-    margin-top: 1.2rem;
-    font-size: 0.9rem;
-    width: 6rem;
-    height: 2.5rem;
-  }
-  
-    /* DESKTOP: other news section */
-
-    .other-news-grid {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      padding-top: 1.5rem;
-    }
-  
-    .other-news {
-      display: grid;
-      grid-template-columns: 1fr;
-      margin: 1rem 1rem 0 1rem;
-      min-width: 10rem;
-    }
-  
-    .other-news-image {
-      width: 70%;
-      border-radius: 5%;
-    }
-  
-    .other-news-textbox {
-      padding: 0.2rem 0 1rem 0;
-    }
-
-}
-@media (min-width: 668px) {
-  /* Lägg in alla queries som är samma för tablet och desktop här */
-  .navbar-menu {
-    display: inline;
-  }
-
-  .navbar-hamburger-icon {
-    display: none;
+  .other-news-grid {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
